# fine_tuned_vit

./: .gitignore  \  main.py  preprocess.py  pyproject.toml  train.py
wandb/: latest-run
wandb/run-20250616_160338-b8z80134/: run-b8z80134.wandb
wandb/run-20250616_160351-1qq0y213/: run-1qq0y213.wandb
wandb/run-20250616_160351-6cq8r6y1/: run-6cq8r6y1.wandb
wandb/run-20250616_160351-vv8cqzqn/: run-vv8cqzqn.wandb
wandb/run-20250616_160351-w3rbib62/: run-w3rbib62.wandb
wandb/run-20250616_160453-mh2af5w1/: run-mh2af5w1.wandb
wandb/run-20250616_160641-9dnwzkmp/: run-9dnwzkmp.wandb
wandb/run-20250616_160928-ebxfgb1d/: run-ebxfgb1d.wandb
wandb/run-20250616_160941-9b5wf9iz/: run-9b5wf9iz.wandb
wandb/run-20250616_160941-ixqhoq5v/: run-ixqhoq5v.wandb
wandb/run-20250616_160941-oxs80xbj/: run-oxs80xbj.wandb
wandb/run-20250616_160941-pdjol7sy/: run-pdjol7sy.wandb
wandb/run-20250616_161223-zq9o6y5v/: run-zq9o6y5v.wandb
wandb/run-20250616_161236-08n1366g/: run-08n1366g.wandb
wandb/run-20250616_161236-4ty25oe0/: run-4ty25oe0.wandb
wandb/run-20250616_161236-ej4ejrvd/: run-ej4ejrvd.wandb
wandb/run-20250616_161236-oxu01anf/: run-oxu01anf.wandb
wandb/run-20250616_172142-3wmprahg/: run-3wmprahg.wandb
wandb/run-20250616_172236-swmfv8n7/: run-swmfv8n7.wandb
wandb/run-20250616_172752-p87m3ufo/: run-p87m3ufo.wandb
wandb/run-20250616_172957-5h5ofd6b/: run-5h5ofd6b.wandb
wandb/run-20250616_174132-gzaiodts/: run-gzaiodts.wandb
wandb/run-20250616_174818-t7p0kqza/: run-t7p0kqza.wandb
wandb/run-20250616_174928-yvo2inx7/: run-yvo2inx7.wandb
(+63 files in other folders)
