[project]
name = "fine-tuned-vit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.3",
    "peft>=0.15.2",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.52.4",
    "wandb>=0.20.1",
]
